# fezz

./: .gitignore  AGENTS.md  Cargo.toml  README.md  test.md
docs/: fezz-bytes-first-abi.md
example_redis/: Cargo.toml
example_redis/src/: lib.rs
example_todosapi/: Cargo.toml
example_todosapi/src/: lib.rs
fezz-js/: Cargo.toml
fezz-js/src/: lib.rs
fezz-macro/: Cargo.toml
fezz-macro/src/: lib.rs
fezz-macros/: Cargo.toml
fezz-macros/src/: lib.rs
fezz-runner/: Cargo.toml
fezz-runner/src/: main.rs
fezz-sdk/: Cargo.toml
fezz-sdk/src/: lib.rs
hhrf/: .gitignore  Cargo.toml
hhrf/src/: main.rs
src/: lib.rs  main.rs
src/control_plane/: mod.rs  registry.rs  routing.rs
src/function/: handler.rs  manifest.rs  mod.rs  registry.rs
src/http/: mod.rs  request.rs  response.rs
src/runtime/: config.rs  mod.rs  server.rs
tests/: integration_tests.rs
todoapisample/: Cargo.toml
todoapisample/src/: fezz.json  lib.rs
