[package]
name = "fezz"
version = "0.1.0"
edition = "2021"
description = "A Rust-based Host HTTP Runtime (HHRF) for lightweight fetch-like Fezz function modules"
license = "MIT"

[workspace]
members = [".", "fezz-macro"]

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = { version = "1", features = ["serde"] }
fezz-macro = { path = "fezz-macro" }

[dev-dependencies]
tokio-test = "0.4"
