[package]
name = "todoapisample"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
fezz-sdk = { path = "../fezz-sdk" }
fezz-macros = { path = "../fezz-macros" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
